# ut_automata

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  JetsonSetup.md  Makefile  README.md  broken_start.bash  findros.py  gui.desktop  install_dependencies.sh  manifest.xml  maps  package.json  package.xml  setup_local.sh  start-gui.desktop  start_car.bash  start_car.sh  test_webclient.sh  test_websocket.html  tsconfig.json  visualization.rviz  web_rviz.html  webclient.html
.github/workflows/: buildTest.yml
config/: car.lua  f1_config.lua  joystick.lua  radio.lua  simulator.lua  vesc.lua
gui/: gui.desktop
launch/: logging.launch  start_car.launch  start_car_wo_joystick.launch  start_joystick.launch  vesc_driver_node.launch
maps/: GDC1.json  GDC2.json  GDC2.txt  GDC3.json  GDC3.txt  TestMap.json  TestMap.txt  txtToJson.c
msg/: CarStatusMsg.msg  ColoredLine2D.msg  Line2D.msg  PathVisualization.msg  VescStateStamped.msg  VisualizationMsg.msg
scripts/: .bashrc  find_available_utcs_host.py  gui.desktop  keyboard_teleop.py  start_car_gui.sh  start_gui.sh  start_ros.sh  startgui.sh  ut_automata.service  ut_automata_gui.service
scripts/shutdown/: stop_all.bash
scripts/startup/: run_joystick_driver.bash  run_joystick_only.bash  run_laser.bash  run_minimal.bash  rviz_config.rviz
src/: get-ip.c
src/gui/: gui_main.cc  gui_mainwindow.cc  gui_mainwindow.h  vector_display.cc  vector_display.h
src/hokuyo/launch/: hokuyo_10lx.launch
src/joystick/: joystick.cc  joystick.h  joystick_driver.cc
src/logger/: logger.cpp  popt_handler.h
src/motion_profiler/: motion_profiler.cpp  popt_pp.h
src/radio_driver/: radio_driver.cpp  radio_driver.h  radio_driver_node.cpp  radio_interface.cpp  radio_interface.h
src/serial/: serial.cc  serial.h
src/shared/: .travis.yml  CMakeLists.txt  Makefile  README.md
src/shared/math/: geometry.h  line2d.h  math_util.h  poses_2d.h
src/shared/tests/math/: line2d_tests.cc  math_tests.cc
src/shared/util/: array_util.h  helpers.cc  pthread_utils.h
src/simulator/: simulator.cc  simulator.h  simulator_main.cc  step_simulator_main.cc  vector_map.cc  vector_map.h
src/vesc_driver/: serial.cc  vesc_driver.cpp  vesc_driver.h  vesc_driver_node.cpp  vesc_interface.cpp  vesc_interface.h  vesc_packet.cpp
src/webserver/: echoserver.cc
src/websocket/: websocket.cc  websocket.h  websocket_main.cc  websocket_main_ros1.cc  websocket_main_ros2.cc
static/: live-view.html
ts/: index.ts  robot-client.ts  types.ts
vesc_config/: vesc.yaml
